agregado el contenido adicional del blog

--- a/blogpost.html
+++ b/blogpost.html
@@ -11,6 +11,7 @@
             post</h1>
         <p>Y este es el parrafo de inicio donde vamos a 
             explicar cosas increibles que se pueden hacer.</p>
+            <p>Hola vengo a flotar.</p>
         </div>
     </div>
     
