--- a/blogpost.html
+++ b/blogpost.html
@@ -1,7 +1,7 @@
 
 <html>
     <head>
-        <title>Bienvenido a Hyperblog</title>
+        <title>Bienvenido a Hyperblog 2.0</title>
         <link rel="stylesheet" href="C:\Users\elias\Proyecto1\estilos.css"/>
 </head>
 <body>
